--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                     <a href="#" class="link">Поиск</a>
                 </nav>
                 <article class="contacts" role="phone number">
-                    <img src="/assets/icons/phone.svg" alt="phone" />
+                    <img
+                        src="/GoszakazGroupMainPage/assets/icons/phone.svg"
+                        alt="phone"
+                    />
                     +7 (987) 887-87
                 </article>
             </div>
@@ -213,7 +216,7 @@
                             Следующая
                             <img
                                 class="next_page_button_icon"
-                                src="/assets/icons/next.svg"
+                                src="/GoszakazGroupMainPage/assets/icons/next.svg"
                                 alt="Стрелка вправо"
                             />
                         </button>
@@ -271,7 +274,7 @@
                                 Подписаться
                                 <img
                                     class="button_icon"
-                                    src="/assets/icons/right_arrow.svg"
+                                    src="/GoszakazGroupMainPage/assets/icons/right_arrow.svg"
                                     alt="Стрелка вправо"
                                 />
                             </button>
